--- a/snapshotjs-server/package.json
+++ b/snapshotjs-server/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "mongoose": "^5.1.6",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "puppeteer": "^1.7.0"
   }
 }
