Added heroku deploy code and updated license to MIT

--- a/snapshotjs-server/package.json
+++ b/snapshotjs-server/package.json
@@ -6,7 +6,12 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install"
+  },
+  "engines": {
+    "node": "8.9.4",
+    "npm": "6.4.0"
   },
   "keywords": [
     "snapshotjs",
@@ -15,7 +20,7 @@
     "server"
   ],
   "author": "Eric Liang <https://www.eric-liang.com>",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "nodemon": "^1.17.5"
   },
